# chess

./: .travis.yml  Actions.hs  Init.hs  Main.hs  Makefile  README.md  Structure.hs  chess.cabal  chess.hs  moves.txt
src/: Actions.hs  Check.hs  Init.hs  Main.hs  Path.hs  Simulation.hs  Structure.hs  Util.hs
src/CLI/: ComputerGame.hs  Helper.hs  Main.hs
tests/: ActionsSpec.hs  StructureSpec.hs  UtilSpec.hs
