name:                chess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andreicosta/chess
--license:
--license-file:
author:              Andrei Costa
maintainer:          acosta@inf.ufrgs.br
--category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       matrix >= 0.3,
                       ansi-terminal >= 0.6
  default-language:    Haskell2010

executable chess
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       chess,
                       matrix >= 0.3,
                       ansi-terminal >= 0.6
  default-language:    Haskell2010
  other-modules:       Actions
                       Init
                       Structure
