name:                chess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andreicosta/chess
--license:
--license-file:
author:              Andrei Costa
maintainer:          acosta@inf.ufrgs.br
--category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src/library/
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.5,
                       matrix >= 0.3,
                       ansi-terminal >= 0.6,
                       random >= 1.1
  exposed-modules:     Actions
                       Init
                       Path
                       Simulation
                       Structure
                       Util
                       Player.Common
                       Player.Moderate
                       Player.Offensive
                       Player.Thinker

executable chess
  hs-source-dirs:      src/CLI/
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       chess,
                       matrix >= 0.3,
                       ansi-terminal >= 0.6
  default-language:    Haskell2010
  other-modules:       Main

executable chess-helper
  hs-source-dirs:      src/CLI/
  main-is:             Helper.hs
  ghc-options:         -Wall -fno-warn-name-shadowing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O
  build-depends:       base,
                       chess,
                       matrix >= 0.3,
                       ansi-terminal >= 0.6
  default-language:    Haskell2010
  other-modules:       Helper

executable chess-computer
  hs-source-dirs:      src/CLI/
  main-is:             ComputerGame.hs
  ghc-options:         -Wall -fno-warn-name-shadowing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       chess,
                       matrix >= 0.3,
                       ansi-terminal >= 0.6,
                       random >= 1.1
  default-language:    Haskell2010
  other-modules:       Main

test-suite HSpecTests
  default-language:    Haskell2010
  hs-source-dirs:      tests/
  main-is:             HSpecRunner.hs
  ghc-options:         -threaded -O
  type:                exitcode-stdio-1.0
  build-depends:       base, chess,
                       hspec >=2.4,
                       hspec-discover >=2.4,
                       matrix >= 0.3
  other-modules:
                       ActionsSpec
                       HSpecTests
                       StructureSpec
                       UtilSpec
